# python-solver-sdk

./: CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
src/psp_solver_sdk/: __init__.py  config.py  core.py
tests/: conftest.py
