[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psp-solver-sdk"
version = "1.0.0"
dependencies = [
    "httpx>=0.28.1,<0.29.0",
    "itsdangerous>=2.2.0,<3.0",
]
requires-python = ">=3.12"

description = "A Python library that helps implement the solver API in PSP"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["psp", "solvers", "solver", "api"]

[project.urls]
Homepage = "https://github.com/Portfolio-Solver-Platform/python-solver-sdk"

[tool.setuptools.packages.find]
where = ["src"]
include = ["psp_solver_sdk*"]
exclude = ["tests*"]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=7,<8",
    "ruff>=0.13.2,<0.14.0",
    "bandit>=1.7,<2.0",
    "pip-audit>=2.7,<3.0",
    "pytest-asyncio>=1.2.0,<=2.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
